[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rcu_excu"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bins/benchmark.rs"

[[bin]]
name = "benchmarkRW"
path = "src/bins/benchmarkRW.rs"

[lib]
name = "rcu"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"