[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "example"
path = "src/bins/example.rs"

[[bin]]
name = "benchmark"
path = "src/bins/benchmark.rs"

[[bin]]
name = "benchmark_list"
path = "src/bins/benchmark_list.rs"

[[bin]]
name = "benchmark_list_rw"
path = "src/bins/benchmark_list_rw.rs"

[[bin]]
name = "benchmarkRW"
path = "src/bins/benchmarkRW.rs"

[[bin]]
name = "benchmarkQsbr"
path = "src/bins/benchmarkQsbr.rs"

[lib]
name = "rcu"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"